# src/dynamicdns.api/Model/Updateip200ResponseAnyOf.cs
@@ -26,37 +26,49 @@ using OpenAPIDateConverter = dynamicdns.api.Client.OpenAPIDateConverter;
 namespace dynamicdns.api.Model
 {
     /// <summary>
-    /// Updateip403Response
+    /// Updateip200ResponseAnyOf
     /// </summary>
-    [DataContract(Name = "updateip_403_response")]
-    internal partial class Updateip403Response : IValidatableObject
+    [DataContract(Name = "updateip_200_response_anyOf")]
+    internal partial class Updateip200ResponseAnyOf : IValidatableObject
     {
         /// <summary>
-        /// Initializes a new instance of the <see cref="Updateip403Response" /> class.
+        /// Initializes a new instance of the <see cref="Updateip200ResponseAnyOf" /> class.
         /// </summary>
         [JsonConstructorAttribute]
-        protected Updateip403Response() { }
+        protected Updateip200ResponseAnyOf() { }
         /// <summary>
-        /// Initializes a new instance of the <see cref="Updateip403Response" /> class.
+        /// Initializes a new instance of the <see cref="Updateip200ResponseAnyOf" /> class.
         /// </summary>
-        /// <param name="message">Error overview. (required).</param>
-        public Updateip403Response(string message = default(string))
+        /// <param name="message">message (required).</param>
+        /// <param name="ip">ip (required).</param>
+        public Updateip200ResponseAnyOf(string message = default(string), string ip = default(string))
         {
             // to ensure "message" is required (not null)
             if (message == null)
             {
-                throw new ArgumentNullException("message is a required property for Updateip403Response and cannot be null");
+                throw new ArgumentNullException("message is a required property for Updateip200ResponseAnyOf and cannot be null");
             }
             this.Message = message;
+            // to ensure "ip" is required (not null)
+            if (ip == null)
+            {
+                throw new ArgumentNullException("ip is a required property for Updateip200ResponseAnyOf and cannot be null");
+            }
+            this.Ip = ip;
         }
 
         /// <summary>
-        /// Error overview.
+        /// Gets or Sets Message
         /// </summary>
-        /// <value>Error overview.</value>
-        /// <example>You are not allowed to update this record</example>
+        /// <example>Record updated</example>
         [DataMember(Name = "message", IsRequired = true, EmitDefaultValue = true)]
         public string Message { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Ip
+        /// </summary>
+        [DataMember(Name = "ip", IsRequired = true, EmitDefaultValue = true)]
+        public string Ip { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
@@ -65,8 +77,9 @@ namespace dynamicdns.api.Model
         public override string ToString()
         {
             StringBuilder sb = new StringBuilder();
-            sb.Append("class Updateip403Response {\n");
+            sb.Append("class Updateip200ResponseAnyOf {\n");
             sb.Append("  Message: ").Append(Message).Append("\n");
+            sb.Append("  Ip: ").Append(Ip).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
